finished logic of player

--- a/client-jss/src/app/app.component.html
+++ b/client-jss/src/app/app.component.html
@@ -1,6 +1,8 @@
 <main class="main-background">
   <main-header></main-header>
   <router-outlet></router-outlet>
+  <audio-player *ngIf="isCurrentPodcastDisplayed">
+  </audio-player>
   <footer-page></footer-page>
   <toast style="display: block; position: fixed; bottom: 20px; right: 20px; z-index: 10" class="z-3"></toast>
 </main>
