--- a/client-jss/src/app/main/components/footer/footer.component.html
+++ b/client-jss/src/app/main/components/footer/footer.component.html
@@ -116,7 +116,7 @@ Footer START -->
 
   <!-- =======================
 Cookies alert START -->
-  <div *ngIf="!hasAcceptCookie"
+  <div *ngIf="!hasAcceptCookie" style="z-index: 1100;"
     class="alert alert-light alert-dismissible fade show position-fixed bottom-0 start-50 translate-middle-x z-index-99 d-lg-flex justify-content-between align-items-center shadow p-4 col-9 col-md-5"
     role="alert">
     <p class="m-0 pe-3">Ce site stocke des cookies sur votre ordinateur. Pour en savoir plus, référez vous à notre <a
