--- a/client-jss/src/app/main/components/audio-player/audio-player.component.html
+++ b/client-jss/src/app/main/components/audio-player/audio-player.component.html
@@ -1,6 +1,5 @@
 <!-- Audio Player Bar -->
-<div class="position-fixed bottom-0 w-100 border-top shadow-sm py-1 px-3 bg-secondary text-white"
-  style="z-index: 1050;">
+<div class="position-fixed bottom-0 w-100 border-top shadow-sm py-1 bg-secondary text-white" style="z-index: 1050;">
   <div class="container px-3 d-flex flex-column flex-md-row align-items-center justify-content-between">
 
     <!-- Left Column: Image + Titre -->
@@ -8,7 +7,9 @@
       <img src="/assets/images/homepage/raide-comme-la-justice.png" alt="Podcast Cover" class="me-3"
         style="width: 48px; height: 48px; object-fit: cover;">
       <div>
-        <div class="fw-bold small card-truncate-1">{{ audioService.currentPodcast?.titleText || 'Aucun podcast' }}</div>
+        <a class="fw-bold small text-white card-truncate-1" (click)="openPodcasts($event)">{{
+          audioService.currentPodcast?.titleText || 'Aucun podcast'
+          }}</a>
         <div *ngIf="audioService.currentPodcast" class="text-muted small">Raide comme la justice</div>
       </div>
     </div>
@@ -35,26 +36,44 @@
     <!-- Right Column: Progression + Volume -->
     <div class="d-flex col-md-5 align-items-center justify-content-end position-relative">
       <small class="text-muted me-1">{{ audioService.currentTime*1000 | date:'mm:ss' }}</small>
-      <input type="range" class="form-range me-1" [style.--progress.%]="audioService.progress" style="width: 400px;"
-        min="0" max="100" step="0.01" [value]="audioService.progress" (input)="onSeek($event)" />
+      <input type="range" class="form-range flex-grow-1 me-1" [style.--progress.%]="audioService.progress" min="0"
+        max="100" step="0.01" [value]="audioService.progress" (input)="onSeek($event)" />
       <small class="text-muted">{{ audioService.duration*1000 | date:'mm:ss' }}</small>
 
       <!-- Volume Dropdown Custom -->
       <div class="dropdown dropup ms-2 position-relative" (mouseenter)="onVolumeMouseEnter()"
         (mouseleave)="onVolumeMouseLeave()">
 
-        <!-- Icône volume : déclenche mute / unmute au clic -->
-        <div role="button" tabindex="0" (click)="toggleMute()" class="d-flex align-items-center justify-content-center">
+        <!-- Volum icon : mute / unmute on clic -->
+        <div role="button" tabindex="0" (click)="toggleMute()"
+          class=" d-none d-md-block d-flex align-items-center justify-content-center">
           <i *ngIf="this.audioService.volume != 0" class="bi-volume-up fs-4 m-0"></i>
           <i *ngIf="this.audioService.volume == 0" class="bi-volume-mute fs-4 m-0"></i>
         </div>
-        <!-- Le dropdown volume slider -->
-        <div class="dropdown-menu p-2" [class.show]="volumeDropdownOpen"
+
+        <!-- Volume slider dropdown -->
+        <div class="dropdown-menu p-2 bg-secondary rounded-1" [class.show]="volumeDropdownOpen"
           style="position: absolute; bottom: 100%; right: -9px; min-width: 40px;">
           <input type="range" class="vertical-range m-0" min="0" max="1" step="0.01" [value]="audioService.volume"
             (input)="onVolumeChange($event)" />
         </div>
       </div>
+
+      <!-- Menu Dropdown Custom -->
+      <div class="dropdown dropup ms-2 position-relative">
+
+        <!-- Menu icon -->
+        <div role="button" tabindex="0" (click)="onOpenMenu()"
+          class=" d-flex align-items-center justify-content-center">
+          <i class="bi-three-dots-vertical fs-4 m-0"></i>
+        </div>
+        <!-- Menu dropdown -->
+        <div class="dropdown-menu p-2 bg-secondary rounded-1" [class.show]="menuDropdownOpen"
+          style="position: absolute; bottom: 120%; right: -9px; min-width: 40px;">
+          <a class="text-white" (click)="closePlayer()">Fermer</a>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
