factorisation components idf-hub and department-hub, refacto repository and service functions ; add frontend filter on publishing-department

--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -193,7 +193,7 @@
                 <div class="col-md-12">
                   <div class="section-title-block d-flex pb-3">
                     <h3 class="section-widget-title">île-de-France</h3>
-                    <a href="category.html" class="text-uppercase section-title-link">
+                    <a class="text-uppercase section-title-link" [routerLink]="'/post/department/'+idf.id">
                       Voir tous
                       <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path
