--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -222,7 +222,7 @@
             </button>
           </div>
         </div>
-        <div class="select-box col-3 justify-content-end">
+        <div class="col-3 justify-content-end">
           <select-myjss-category class="cursor-pointer" [additionnalType]="this.myJssCategories[0]"
             [(model)]="secondSelectedMyJssCategory" label="Catégories" [form]="practicalSheetsForm"
             propertyName="secondSelectedMyJssCategory" [isMandatory]="false" (onFormChange)="searchForSecondPosts()"
