--- a/client-jss/src/app/main/components/department-hub/department-hub.component.html
+++ b/client-jss/src/app/main/components/department-hub/department-hub.component.html
@@ -5,15 +5,32 @@
         <div class="container">
           <div class="row">
             <div class="col-8">
-              <div class="input-group custom-input-group align-items-center py-0 rounded-1 row mb-3">
-                <div class="row align-items-center">
-                  <generic-input style="flex-grow: 1;" [(model)]="searchText" label="Rechercher" [form]="hubForm"
-                    propertyName="searchText" [isMandatory]="false" [isDisabled]="false" [isDisplayLabel]="false"
-                    (onFormChange)="searchForPosts()" class="col" [icon]="'search'"></generic-input>
+              <div class="w-100 my-3 d-flex justify-content-between">
+                <div class="col-12">
+                  <div class="input-group custom-input-group align-items-center py-0 rounded-1 row">
+                    <div class="col">
+                      <div class="row align-items-center">
+                        <generic-input style="flex-grow: 1;" [(model)]="searchText" label="Rechercher" [form]="hubForm"
+                          propertyName="searchText" [isMandatory]="false" [isDisabled]="false" [isDisplayLabel]="false"
+                          (onFormChange)="searchForPosts()" [icon]="'search'" class="btn-search col"></generic-input>
 
-                  <button *ngIf="searchText" class="btn btn-clear-search" (click)="clearSearch()">
-                    <i class="bi bi-x-lg"></i>
-                  </button>
+                        <div *ngIf="isLoading" class="col-1 d-flex spinner-border rounded-circle text-dark me-2"
+                          role="status">
+                          <span class="visually-hidden">chargement...</span>
+                        </div>
+
+                        <button *ngIf="searchText" class="col-1 btn btn-link btn-search" (click)="clearSearch()">
+                          <i class="ai ai-cross-alt"></i>
+                        </button>
+                      </div>
+                    </div>
+                    <div class="col-3 justify-content-end">
+                      <select-publishing-department class="cursor-pointer" [(model)]="selectedPublishingDepartment"
+                        placeholder="Département" [form]="hubForm" propertyName="selectedPublishingDepartment"
+                        [isMandatory]="false" (onFormChange)="searchForPosts()"
+                        [isDisabled]="false"></select-publishing-department>
+                    </div>
+                  </div>
                 </div>
               </div>
 
@@ -225,7 +242,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-4">
               <div class="card mb-3 border border-light p-3">
                 <div class="wrapper">
                   <div class="row">
@@ -238,9 +255,8 @@
                   </div>
                   <ul class="tag-cloud list-inline">
                     <!-- TODO replace with routerLink and make it work -->
-                    <li *ngFor="let tag of tagsByEntityType" class="list-inline-item pb-1"><a
-                        class="btn bg-light text-secondary bg-hover-danger text-hover-white bg-hover-secondary text-hover-white"
-                        (click)="openTagPosts(tag,$event)">{{tag.name}}</a>
+                    <li *ngFor="let tag of tagsByEntityType" class="list-inline-item pb-1"><a class="btn bg-light text-secondary bg-hover-danger text-hover-white bg-hover-secondary
+                        text-hover-white" (click)="openTagPosts(tag,$event)">{{tag.name}}</a>
                     </li>
                   </ul>
                 </div>
