Code review corrections

--- a/client-jss/src/app/main/components/audio-player/audio-player.component.html
+++ b/client-jss/src/app/main/components/audio-player/audio-player.component.html
@@ -1,11 +1,13 @@
 <!-- Audio Player Bar -->
-<div class="position-fixed bottom-0 w-100 border-top shadow-sm py-1 bg-secondary text-white" style="z-index: 1050;">
+<div class="position-fixed bottom-0 w-100 border-top shadow-sm py-1 bg-secondary text-white" style="z-index: 100;">
   <div class="container px-3 d-flex flex-column flex-md-row align-items-center justify-content-between">
 
     <!-- Left Column: Image + Titre -->
     <div class="d-flex align-items-center col-md-5 mb-2 mb-md-0">
-      <img src="/assets/images/homepage/raide-comme-la-justice.png" alt="Podcast Cover" class="me-3"
-        style="width: 48px; height: 48px; object-fit: cover;">
+      <a (click)="openPodcasts($event)">
+        <img src="/assets/images/homepage/raide-comme-la-justice.png" alt="Podcast Cover" class="me-3"
+          style="width: 48px; height: 48px; object-fit: cover;">
+      </a>
       <div>
         <a class="fw-bold small text-white card-truncate-1" (click)="openPodcasts($event)">{{
           audioService.currentPodcast?.titleText || 'Aucun podcast'
@@ -17,7 +19,7 @@
     <!-- Middle Column: Contrôles -->
     <div class="d-flex col-auto align-items-center justify-content-center mb-2 mb-md-0">
       <a class="btn text-white rounded-circle d-flex align-items-center justify-content-center me-2"
-        style="width: 48px; height: 48px;" (click)="backward15Secs()">
+        style="width: 48px; height: 48px;" (click)="backwardFifteenSecs()">
         <div class="position-relative"><i class="bi-arrow-counterclockwise fs-2"></i>
           <span class="position-absolute top-50 start-50 translate-middle fs-9">15</span>
         </div>
@@ -26,7 +28,7 @@
           [ngClass]="audioService.isPlaying ? 'bi-pause-fill' : 'bi-play-fill'"></i></a>
 
       <a class="btn text-white rounded-circle d-flex align-items-center justify-content-center me-2"
-        style="width: 48px; height: 48px;" (click)="forward15Secs()">
+        style="width: 48px; height: 48px;" (click)="forwardFifteenSecs()">
         <div class="position-relative"><i class="bi-arrow-clockwise fs-2"></i>
           <span class="position-absolute top-50 start-50 translate-middle fs-9">15</span>
         </div>
