--- a/client-jss/src/app/main/components/podcasts/podcasts.component.html
+++ b/client-jss/src/app/main/components/podcasts/podcasts.component.html
@@ -14,7 +14,7 @@
   </div>
 </div>
 <div class="container">
-  <ng-container *ngIf="selectedEntityType">
+  <ng-container *ngIf="categoryPodcast">
     <div class="bg-container">
       <div class="w-100 justify-content-between mb-3">
         <div class="container">
