--- a/client-jss/src/app/main/components/generic-select/generic-select.component.html
+++ b/client-jss/src/app/main/components/generic-select/generic-select.component.html
@@ -8,6 +8,6 @@
         {{ displayLabel(type) }}
       </option>
     </select>
-    <i class="ai-chevron-down chevron"></i>
+    <i class="bi-chevron-down chevron btn-search"></i>
   </div>
 </div>
