--- a/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
+++ b/client-myjss/src/app/modules/company/components/join-us/join-us.component.html
@@ -162,7 +162,7 @@
 
     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4">
       <!-- COMPTABILITÉ -->
-      <div class="col">
+      <div class="col  order-md-1  order-1">
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body">
             <h3 class="h4">Comptabilité</h3>
@@ -172,7 +172,7 @@
       </div>
 
       <!-- YELLOW BLOC -->
-      <div class="col">
+      <div class="col  order-md-2  order-3">
         <div class="card h-100 border-0 rounded-5 yellow-card">
           <div class="card-body text-center">
             <h2 class="blue-title">Une cohésion entre les équipes pour offrir le meilleur accompagnement</h2>
@@ -181,7 +181,7 @@
       </div>
 
       <!-- INFORMATIQUE -->
-      <div class="col">
+      <div class="col  order-md-3  order-2">
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body">
             <h3 class="h4">Informatique</h3>
@@ -249,7 +249,7 @@
         style="animation: rotate-ccw 50s linear infinite;" alt="Circle">
       <img class="position-absolute top-0 start-0 z-2" src="assets/img/societe/join_us_logo.png" alt="Icon">
     </div>
-    <div class="col-md-5 text-center text-md-start pe-md-5 pe-lg-0 pe-xxl-4 ps-xl-5 mb-5 mb-md-0 m-3">
+    <div class="col-md-5 text-center text-md-start pe-md-5 pe-lg-0 pe-xxl-4 ps-xl-5 mb-5 mb-md-0 m-md-3">
       <h2 class="h1 pb-3 pb-xl-2 mb-lg-4 mb-xl-5">L'écosystème technique qui soutient notre innovation</h2>
       <p>Nous utilisons une stack technique moderne et performante, conçue pour garantir la fiabilité, la sécurité et
         l'évolutivité de nos services, tout en anticipant les besoins futurs.</p>
@@ -270,7 +270,7 @@
           <span class="bg-primary yellow-card mt-2 me-2 checkbox-custom"></span>
           Sécurité : OAuth
         </li>
-        <li class="d-flex pb-2 mb-1">
+        <li class="d-flex pb-2 mb-1  " style="text-align: left;">
           <span class="bg-primary yellow-card mt-2 me-2 checkbox-custom"></span>
           Bureautique : Teams, Microsoft Office, Windows
         </li>
