--- a/client-myjss/src/app/modules/miscellaneous/components/autocomplete-post/autocomplete-post.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/autocomplete-post/autocomplete-post.component.html
@@ -26,8 +26,8 @@
           <a class="h5 text-dark text-truncate-1 me-2 flex-shrink-1" *ngIf="item"
             [innerHTML]="item.titleText | trustHtml"></a>
           <ng-container *ngIf="item && item.postTags">
-            <span class="badge bg-primary fs-xs flex-shrink-0 text-nowrap" style="margin-top: -15px;margin-right: 3px;"
-              *ngFor="let tag of item.postTags.slice(0,3)">
+            <span class="badge bg-primary fs-xs flex-shrink-0 text-nowrap text-dark"
+              style="margin-top: -15px;margin-right: 3px;" *ngFor="let tag of item.postTags.slice(0,3)">
               {{ tag.name }}
             </span>
           </ng-container>
