--- a/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
+++ b/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
@@ -217,15 +217,16 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-md-6 col-12 align-items-center">
-        <div class="input-group custom-input-border align-items-center py-0 rounded-1 row">
-          <generic-input style="flex-grow: 1;" label="E-mail" [form]="webinarsForm" propertyName="email"
-            [(model)]="replayMail" [isMandatory]="false" [isDisabled]="false" [isDisplayLabel]="false" class="col"
-            type="email" [icon]="'mail'"></generic-input>
+        <div class="input-group input-group-border text-white align-items-center py-1 mt-5 rounded-1 d-flex">
+          <div class="col">
+            <div class="row align-items-center me-1">
+              <generic-input style="flex-grow: 1;" label="E-mail" [form]="webinarsForm" propertyName="email"
+                [(model)]="replayMail" [isMandatory]="false" [isDisabled]="false" [isDisplayLabel]="false" class="col"
+                type="email" [icon]="'mail'"></generic-input>
 
-          <button class="btn btn-light col-12 col-sm-6 col-md-6 col-lg-4 mx-1 my-1" type="button"
-            (click)="sendReplay()">
-            Voir le replay <i class="fas fa-envelope-open-text ms-1"></i>
-          </button>
+              <button class="btn btn-primary col-4" type="button" (click)="sendReplay()">Voir le replay</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
