--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -95,8 +95,7 @@
       <nav class="navbar text-uppercase text-white-100 navbar-expand-lg">
         <div class="collapse navbar-collapse" id="main_nav">
           <ul class="navbar-nav me-auto">
-            <!-- TODO correct value with constant -->
-            <li class="nav-item dropdown"> <a class="nav-link  dropdown-toggle" [routerLink]="'/post/department/'+6">île
+            <li class="nav-item dropdown"> <a class="nav-link  dropdown-toggle">île
                 de France </a>
               <ul class="dropdown-menu">
                 <li> <a *ngFor="let department of departments" class="dropdown-item" style="cursor: pointer;"
