--- a/client-jss/src/app/main/components/department-hub/department-hub.component.css
+++ b/client-jss/src/app/main/components/department-hub/department-hub.component.css
@@ -27,29 +27,6 @@
   cursor: not-allowed;
 }
 
-.btn-clear-search {
-  position: absolute;
-  top: 50%;
-  right: 3rem;
-  transform: translateY(-50%);
-  background: transparent;
-  border: none;
-  color: #999;
-  padding: 0;
-  margin: 0;
-  z-index: 3;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 1.5rem;
-  height: 1.5rem;
-  font-size: 1rem;
-  line-height: 1;
-  cursor: pointer;
-}
-
 .gray-400 {
   color: var(--bs-gray-400);
 }
@@ -84,5 +61,16 @@
   display: flex;
   align-items: center;
   height: 24px;
+}
 
+.clear-btn {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-40%);
+  z-index: 10;
+  padding: 0;
+  border: none;
+  background: transparent;
+  cursor: pointer;
 }
