--- a/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -28,6 +28,8 @@
           [affaireSearch]="affaireSearcAuthorityValidated" [isForDashboard]="true"></provision-list>
         <provision-list class="dashboard-box-component" *ngIf="item==AFFAIRE_WAITING_FINAL_DOCUMENT_AUTHORITY"
           [affaireSearch]="affaireWaitingFinalDocumentAuthority" [isForDashboard]="true"></provision-list>
+        <provision-list class="dashboard-box-component" *ngIf="item==AFFAIRE_DOCUMENT_AUTHORITY_TECHNICAL_BLOCKING"
+          [affaireSearch]="affairTechnicalBlockingAuthority" [isForDashboard]="true"></provision-list>
         <provision-list class="dashboard-box-component" *ngIf="item==AFFAIRE_TO_DO" [affaireSearch]="affaireSearchToDo"
           [isForDashboard]="true"></provision-list>
         <provision-list class="dashboard-box-component" *ngIf="item==AFFAIRE_RESPONSIBLE_TO_DO"
