fix audio player getters

--- a/client-jss/src/app/main/components/audio-player/audio-player.component.html
+++ b/client-jss/src/app/main/components/audio-player/audio-player.component.html
@@ -8,14 +8,14 @@
         <img src="/assets/images/homepage/raide-comme-la-justice.png" alt="Podcast Cover" class="me-3"
           style="width: 48px; height: 48px; object-fit: cover;">
       </a>
-      <div *ngIf="audioService.currentPodcast && audioService.currentPodcast.titleText" class="overflow-hidden w-100">
+      <div *ngIf="currentPodcast && currentPodcast.titleText" class="overflow-hidden w-100">
         <div #scrollTextZone>
           <a class="d-inline-block text-nowrap text-white"
-            [ngClass]=" { 'animate-scroll' : audioService.currentPodcast.titleText.length*16>containerSize }">
-            {{ audioService.currentPodcast.titleText || 'Aucun podcast' }}
+            [ngClass]=" { 'animate-scroll' : currentPodcast.titleText.length*16>containerSize }">
+            {{ currentPodcast.titleText || 'Aucun podcast' }}
           </a>
         </div>
-        <div *ngIf="audioService.currentPodcast" class="text-muted small">Raide comme la justice</div>
+        <div *ngIf="audioPlayerService.currentPodcast" class="text-muted small">Raide comme la justice</div>
       </div>
     </div>
 
@@ -28,7 +28,7 @@
         </div>
       </a>
       <a class="col-auto btn-light rounded-circle btn-circle-md fs-4 me-2" (click)="togglePlayPause()"><i
-          [ngClass]="audioService.isPlaying ? 'bi-pause-fill' : 'bi-play-fill'"></i></a>
+          [ngClass]="isPlaying ? 'bi-pause-fill' : 'bi-play-fill'"></i></a>
 
       <a class="btn text-white rounded-circle d-flex align-items-center justify-content-center me-2"
         style="width: 48px; height: 48px;" (click)="forwardFifteenSecs()">
@@ -40,10 +40,10 @@
 
     <!-- Right Column: Progression + Volume -->
     <div class="d-flex col-md-5 align-items-center justify-content-end position-relative">
-      <small class="text-muted me-1">{{ audioService.currentTime*1000 | date:'mm:ss' }}</small>
-      <input type="range" class="form-range flex-grow-1 me-1" [style.--progress.%]="audioService.progress" min="0"
-        max="100" step="0.01" [value]="audioService.progress" (input)="onSeek($event)" />
-      <small class="text-muted">{{ audioService.duration*1000 | date:'mm:ss' }}</small>
+      <small class="text-muted me-1">{{ currentTime*1000 | date:'mm:ss' }}</small>
+      <input type="range" class="form-range flex-grow-1 me-1" [style.--progress.%]="progress" min="0" max="100"
+        step="0.01" [value]="progress" (input)="onSeek($event)" />
+      <small class="text-muted">{{ duration*1000 | date:'mm:ss' }}</small>
 
       <!-- Volume Dropdown Custom -->
       <div class="dropdown dropup ms-2 position-relative" (mouseenter)="onVolumeMouseEnter()"
